--- a/compose.yaml
+++ b/compose.yaml
@@ -9,8 +9,18 @@ services:
     ports:
       - ${POSTGRES_PORT}:5432
 
-  # Tempo runs as user 10001, and docker compose creates the volume as root.
-  # As such, we need to chown the volume in order for Tempo to start correctly.
+  otelcol:
+    image: otel/opentelemetry-collector-contrib
+    volumes:
+      - ./otel-collector.yaml:/etc/otelcol-contrib/config.yaml
+    ports:
+      - 1888:1888 # pprof extension
+      - 8888:8888 # Prometheus metrics exposed by the Collector
+      - 8889:8889 # Prometheus exporter metrics
+      - 13133:13133 # health_check extension
+      - 4317:4317 # OTLP gRPC receiver
+      - 4318:4318 # OTLP http receiver
+      - 55679:55679 # zpages extension
 
   init:
     image: &tempoImage grafana/tempo:latest
@@ -29,20 +39,10 @@ services:
       - ./tempo.yaml:/etc/tempo.yaml
       - ./tempo-data:/var/tempo
     ports:
-      - "14268"  # jaeger ingest
-      - "3200:3200"   # tempo
-      - "4317:4317"  # otlp grpc
-      - "14318:4318"  # otlp http
-      - "9411"   # zipkin
+      - "3200" # tempo
+      - "4317"
     depends_on:
       - init
-
-  # And put them in an OTEL collector pipeline...
-  otel-collector:
-    image: otel/opentelemetry-collector:0.86.0
-    command: [ "--config=/etc/otel-collector.yaml" ]
-    volumes:
-      - ./otel-collector.yaml:/etc/otel-collector.yaml
 
   prometheus:
     image: prom/prometheus:latest
