--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,11 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev",
+    "build": "react-router build",
+    "dev": "react-router dev",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc",
+    "start": "react-router-serve ./build/server/index.js",
+    "typecheck": "react-router typegen && tsc",
     "prepare": "ts-patch install && typia patch"
   },
   "dependencies": {
@@ -27,6 +27,7 @@
     "@opentelemetry/auto-instrumentations-node": "^0.50.0",
     "@opentelemetry/auto-instrumentations-web": "^0.41.0",
     "@opentelemetry/context-zone": "^1.26.0",
+    "@opentelemetry/core": "^2.0.0",
     "@opentelemetry/exporter-metrics-otlp-proto": "^0.53.0",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.53.0",
     "@opentelemetry/instrumentation": "^0.53.0",
@@ -41,9 +42,10 @@
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@remix-run/node": "^2.10.2",
-    "@remix-run/react": "^2.10.2",
-    "@remix-run/serve": "^2.10.2",
+    "@react-router/dev": "^7.4.1",
+    "@react-router/fs-routes": "^7.4.1",
+    "@react-router/node": "^7.4.1",
+    "@react-router/serve": "^7.4.1",
     "clsx": "^2.1.1",
     "common": "link:../common",
     "convert-units": "^2.3.4",
@@ -53,10 +55,12 @@
     "lexical": "^0.16.1",
     "lucide-react": "^0.411.0",
     "opentelemetry-instrumentation-remix": "^0.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-router": "^7.4.1",
     "remix-utils": "^7.6.0",
+    "routes": "link:@react-router/dev/routes",
     "schema-dts": "^1.1.2",
     "sonner": "^1.5.0",
     "tinyduration": "^3.3.1",
@@ -65,30 +69,30 @@
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.6.0",
-    "@remix-run/dev": "^2.10.2",
+    "@eslint/js": "^9.7.0",
+    "@react-router/dev": "^7.0.0",
     "@ryoppippi/unplugin-typia": "npm:@jsr/ryoppippi__unplugin-typia@^0.6.9",
     "@stylistic/eslint-plugin": "^2.3.0",
     "@types/convert-units": "^2.3.9",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.38.0",
+    "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react": "^7.34.4",
     "eslint-plugin-react-hooks": "5.1.0-rc-85acf2d195-20240711",
     "globals": "^15.8.0",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.39",
     "react-refresh": "^0.14.2",
     "tailwindcss": "^3.4.6",
     "ts-patch": "^3.2.1",
-    "typescript": "^5.5.2",
-    "typescript-eslint": "^7.16.0",
-    "vite": "^5.1.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^7.16.1",
+    "vite": "^5.3.4",
     "vite-plugin-svgr": "^4.2.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "engines": {
     "node": ">=20.0.0"
