--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -13,10 +13,8 @@
       "DOM.Iterable",
       "ES2022"
     ],
-    "types": [
-      "@remix-run/node",
-      "vite/client"
-    ],
+    "types": ["@react-router/node", "vite/client"],
+    "rootDirs": [".", "./.react-router/types"],
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
