--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,90 +9,91 @@
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
-    "prepare": "ts-patch install && typia patch"
+    "prepare": "ts-patch install"
   },
   "dependencies": {
-    "@fontsource-variable/playfair-display": "^5.0.25",
-    "@fontsource-variable/raleway": "^5.0.20",
-    "@headlessui/react": "^2.1.2",
-    "@lexical/code": "^0.16.1",
-    "@lexical/headless": "^0.16.1",
-    "@lexical/html": "^0.16.1",
-    "@lexical/link": "^0.16.1",
-    "@lexical/list": "^0.16.1",
-    "@lexical/react": "^0.16.1",
-    "@lexical/rich-text": "^0.16.1",
+    "@fontsource-variable/playfair-display": "^5.2.5",
+    "@fontsource-variable/raleway": "^5.2.5",
+    "@headlessui/react": "^2.2.1",
+    "@lexical/code": "^0.30.0",
+    "@lexical/headless": "^0.30.0",
+    "@lexical/html": "^0.30.0",
+    "@lexical/link": "^0.30.0",
+    "@lexical/list": "^0.30.0",
+    "@lexical/react": "^0.30.0",
+    "@lexical/rich-text": "^0.30.0",
     "@lucide/lab": "^0.1.2",
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.50.0",
-    "@opentelemetry/auto-instrumentations-web": "^0.41.0",
-    "@opentelemetry/context-zone": "^1.26.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.57.1",
+    "@opentelemetry/auto-instrumentations-web": "^0.46.0",
+    "@opentelemetry/context-zone": "^2.0.0",
     "@opentelemetry/core": "^2.0.0",
-    "@opentelemetry/exporter-metrics-otlp-proto": "^0.53.0",
-    "@opentelemetry/exporter-trace-otlp-proto": "^0.53.0",
-    "@opentelemetry/instrumentation": "^0.53.0",
-    "@opentelemetry/instrumentation-document-load": "^0.40.0",
-    "@opentelemetry/propagator-b3": "^1.26.0",
-    "@opentelemetry/resources": "^1.26.0",
-    "@opentelemetry/sdk-node": "^0.53.0",
-    "@opentelemetry/sdk-trace-base": "^1.26.0",
-    "@opentelemetry/sdk-trace-node": "^1.26.0",
-    "@opentelemetry/sdk-trace-web": "^1.26.0",
-    "@opentelemetry/semantic-conventions": "^1.27.0",
-    "@radix-ui/react-navigation-menu": "^1.2.0",
-    "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "@react-router/dev": "^7.4.1",
-    "@react-router/fs-routes": "^7.4.1",
-    "@react-router/node": "^7.4.1",
-    "@react-router/serve": "^7.4.1",
+    "@opentelemetry/exporter-metrics-otlp-proto": "^0.200.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.200.0",
+    "@opentelemetry/instrumentation": "^0.200.0",
+    "@opentelemetry/instrumentation-document-load": "^0.45.0",
+    "@opentelemetry/propagator-b3": "^2.0.0",
+    "@opentelemetry/resources": "^2.0.0",
+    "@opentelemetry/sdk-metrics": "^2.0.0",
+    "@opentelemetry/sdk-node": "^0.200.0",
+    "@opentelemetry/sdk-trace-base": "^2.0.0",
+    "@opentelemetry/sdk-trace-node": "^2.0.0",
+    "@opentelemetry/sdk-trace-web": "^2.0.0",
+    "@opentelemetry/semantic-conventions": "^1.30.0",
+    "@radix-ui/react-navigation-menu": "^1.2.6",
+    "@radix-ui/react-popover": "^1.1.7",
+    "@radix-ui/react-tooltip": "^1.2.0",
+    "@react-router/dev": "^7.5.0",
+    "@react-router/fs-routes": "^7.5.0",
+    "@react-router/node": "^7.5.0",
+    "@react-router/serve": "^7.5.0",
     "clsx": "^2.1.1",
     "common": "link:../common",
     "convert-units": "^2.3.4",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "format-quantity": "^3.0.0",
-    "isbot": "^5.1.13",
-    "lexical": "^0.16.1",
-    "lucide-react": "^0.411.0",
-    "opentelemetry-instrumentation-remix": "^0.7.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.1",
-    "react-router": "^7.4.1",
-    "remix-utils": "^7.6.0",
+    "isbot": "^5.1.26",
+    "lexical": "^0.30.0",
+    "lucide-react": "^0.487.0",
+    "opentelemetry-instrumentation-remix": "^0.8.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
+    "react-router": "^7.5.0",
+    "remix-utils": "^8.5.0",
     "routes": "link:@react-router/dev/routes",
-    "schema-dts": "^1.1.2",
-    "sonner": "^1.5.0",
-    "tinyduration": "^3.3.1",
-    "typia": "^6.5.2"
+    "schema-dts": "^1.1.5",
+    "sonner": "^2.0.3",
+    "tinyduration": "^3.4.1",
+    "typia": "^9.1.0"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.7.0",
+    "@eslint/compat": "^1.2.8",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.24.0",
     "@react-router/dev": "^7.0.0",
-    "@ryoppippi/unplugin-typia": "npm:@jsr/ryoppippi__unplugin-typia@^0.6.9",
-    "@stylistic/eslint-plugin": "^2.3.0",
-    "@types/convert-units": "^2.3.9",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-react": "^7.34.4",
-    "eslint-plugin-react-hooks": "5.1.0-rc-85acf2d195-20240711",
-    "globals": "^15.8.0",
-    "postcss": "^8.4.39",
-    "react-refresh": "^0.14.2",
-    "tailwindcss": "^3.4.6",
-    "ts-patch": "^3.2.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^7.16.1",
-    "vite": "^5.3.4",
-    "vite-plugin-svgr": "^4.2.0",
-    "vite-tsconfig-paths": "^4.3.2"
+    "@ryoppippi/unplugin-typia": "^2.2.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
+    "@types/convert-units": "^2.3.11",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.2",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.24.0",
+    "eslint-import-resolver-typescript": "^4.3.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "globals": "^16.0.0",
+    "postcss": "^8.5.3",
+    "react-refresh": "^0.17.0",
+    "tailwindcss": "^4.1.3",
+    "ts-patch": "^3.3.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1",
+    "vite": "^6.2.5",
+    "vite-plugin-svgr": "^4.3.0",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "engines": {
     "node": ">=20.0.0"
