add new frontend

--- a/mprocs.yaml
+++ b/mprocs.yaml
@@ -2,9 +2,9 @@ procs:
   backend:
     cmd: ["task", "be:dev"]
     stop: "SIGKILL"
-  # frontend:
-  #   cmd: ["task", "fe:dev"]
-  #   stop: "SIGKILL"
+  frontend:
+    cmd: ["task", "fe:dev"]
+    stop: "SIGKILL"
   # caddy:
   #   cmd: ["task", "proxy"]
   #   stop: "SIGKILL"
