--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -30,7 +30,7 @@ thiserror = "1.0.58"
 tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
 uuid = { version = "1.8.0", features = ["v7", "serde"] }
 testcontainers = { version = "0.16.6", features = ["blocking"] }
-testcontainers-modules = { version = "0.4.0", features = ["postgres"] }
+testcontainers-modules = { version = "0.4.0", features = ["postgres", "kafka"] }
 reqwest = { version = "0.12.5", features = ["json"] }
 chrono = { version = "0.4.38", features = ["serde"] }
 once_cell = "1.19.0"
@@ -55,6 +55,7 @@ opentelemetry-otlp = { version = "0.29.0", features = [
 axum-tracing-opentelemetry = "0.28.0"
 tower-http = { version = "0.6.2", features = ["trace", "metrics"] }
 tracing-logfmt = "0.3.5"
+rdkafka = "0.37.0"
 
 [dependencies.serde_json]
 version = "1.0.115"
