--- a/compose.yaml
+++ b/compose.yaml
@@ -9,18 +9,17 @@ services:
     ports:
       - ${POSTGRES_PORT}:5432
 
-  otelcol:
-    image: otel/opentelemetry-collector-contrib
-    volumes:
-      - ./otel-collector.yaml:/etc/otelcol-contrib/config.yaml
+  alloy:
+    image: grafana/alloy:v1.8.1
     ports:
-      - 1888:1888 # pprof extension
-      - 8888:8888 # Prometheus metrics exposed by the Collector
-      - 8889:8889 # Prometheus exporter metrics
-      - 13133:13133 # health_check extension
-      - 4317:4317 # OTLP gRPC receiver
-      - 4318:4318 # OTLP http receiver
-      - 55679:55679 # zpages extension
+      - 12345:12345 # HTTP server for Alloy
+      - 4317:4317   # gRPC endpoint for OpenTelemetry
+      - 4318:4318   # HTTP endpoint for OpenTelemetry
+    volumes:
+      - ./config.alloy:/etc/alloy/config.alloy # Mount Alloy configuration
+    command: run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/config.alloy
+    depends_on:
+      - loki
 
   init:
     image: &tempoImage grafana/tempo:latest
@@ -40,7 +39,6 @@ services:
       - ./tempo-data:/var/tempo
     ports:
       - "3200" # tempo
-      - "4317"
     depends_on:
       - init
 
@@ -66,7 +64,21 @@ services:
       - GF_AUTH_DISABLE_LOGIN_FORM=true
       - GF_FEATURE_TOGGLES_ENABLE=traceqlEditor
     ports:
-      - "3000:3000"
+      - "3333:3000"
+
+  loki:
+    image: grafana/loki:latest
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/local-config.yaml
+    volumes:
+      - ./loki.yaml:/etc/loki/local-config.yaml
+
+  promtail:
+    image: grafana/promtail:latest
+    volumes:
+      - /var/log:/var/log
+    command: -config.file=/etc/promtail/config.yml
 
   kafka-ui:
     image: kafbat/kafka-ui:main
@@ -78,6 +90,7 @@ services:
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9093
     depends_on:
       - kafka
+
   kafka:
     image: apache/kafka-native
     ports:
