--- a/grafana-datasources.yaml
+++ b/grafana-datasources.yaml
@@ -28,3 +28,16 @@ datasources:
     httpMethod: GET
     serviceMap:
       datasourceUid: prometheus
+- name: Loki
+  type: loki
+  uid: loki
+  access: proxy
+  orgId: 1
+  url: http://loki:3100
+  basicAuth: false
+  isDefault: false
+  version: 1
+  editable: false
+  jsonData:
+    timeout: 60
+    maxLines: 1000
