--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,7 +8,6 @@ async-trait = "0.1.79"
 axum = { version = "0.7.5", features = ["multipart", "macros"] }
 color-eyre = "0.6.3"
 common = { version = "0.0.0", path = "../common" }
-config = "0.15.11"
 eyre = "0.6.12"
 regex = "1.10.4"
 rayon = "1.10.0"
@@ -52,6 +51,7 @@ mockall = "0.13.1"
 opentelemetry-appender-tracing = { version = "0.29.1", features = [
   "tracing-opentelemetry",
 ] }
+figment = { version = "0.10.19", features = ["yaml", "env"] }
 
 [dependencies.serde_json]
 version = "1.0.115"
