--- a/.taskfiles/Backend/Taskfile.yaml
+++ b/.taskfiles/Backend/Taskfile.yaml
@@ -18,6 +18,7 @@ tasks:
   dev:
     desc: "[BACKEND] start development server"
     cmd: bacon run
+    dir: backend
   install:
     desc: "[BACKEND] install dependencies"
     cmd: "cargo fetch"
