--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -52,6 +52,12 @@ opentelemetry-appender-tracing = { version = "0.29.1", features = [
   "tracing-opentelemetry",
 ] }
 figment = { version = "0.10.19", features = ["yaml", "env"] }
+reqwest-middleware = "0.4.2"
+reqwest-tracing = {version = "0.5.7", features = ["opentelemetry_0_29"]}
+http = "1.3.1"
+log = "0.4.27"
+tracing-log = "0.2.0"
+structured-logger = "1.0.4"
 
 [dependencies.serde_json]
 version = "1.0.115"
