--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -58,6 +58,10 @@ http = "1.3.1"
 log = "0.4.27"
 tracing-log = "0.2.0"
 structured-logger = "1.0.4"
+tower = "0.5.2"
+tracing-opentelemetry-instrumentation-sdk = "0.28.0"
+pin-project-lite = "0.2.16"
+futures-util = "0.3.31"
 
 [dependencies.serde_json]
 version = "1.0.115"
