--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -62,6 +62,7 @@ tower = "0.5.2"
 tracing-opentelemetry-instrumentation-sdk = "0.28.0"
 pin-project-lite = "0.2.16"
 futures-util = "0.3.31"
+itertools = "0.14.0"
 
 [dependencies.serde_json]
 version = "1.0.115"
